correctif pour faire apparaitre les prefs meme sur petit ecran

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-inverse ">
       <div class="container-fluid">
         <a class="navbar-brand text-center" style="position: absolute;width: 100%; margin: auto; left: 0; top: 0" href="#">TropTardMiage</p>
-        <div class="collapse navbar-collapse">
+        <div class="navbar-collapse">
           <ul class="nav navbar-nav pull-left">
             <li><a href="#"><span class="glyphicon glyphicon-wrench"></span> Préférences</a></li>
           </ul>
@@ -43,7 +43,7 @@
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-route/angular-route.min.js"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
     <!-- JS from troptardmiage -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
