--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,6 +15,7 @@
         <div ui-view></div>
 
     </div>
+    <a href="#" ng-click="loadODCategories()">CHARGEMENT</a>
 
     <footer class="footer">
       <div class="container">
@@ -32,6 +33,7 @@
     <!-- JS from troptardmiage -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/services/serviceajax.js"></script>
     
     <script>
       var init = function() {
