--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -21,6 +21,7 @@
 
     </div>
     <a href="#" ng-click="loadODCategories()">CHARGEMENT</a>
+    <a href="#" ng-click="loadUsers()">LIST</a>
 
     <footer class="footer">
       <div class="container">
