--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -46,6 +46,7 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/services/opendataapi.js"></script>
+    <script src="scripts/services/ttmstorageapi.js"></script>
 
     <script>
       var init = function() {
