ajout image accueil

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -49,6 +49,21 @@
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">CiTropTard</a>
             </div>
+            
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="hidden">
+                        <a href="#page-top"></a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#evenements">événements</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#preferences">Préférences</a>
+                    </li>
+                </ul>
+            </div>
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container-fluid -->
@@ -65,6 +80,11 @@
 	        </div>
 	    </div>
 	</header>
+	
+
+	
+	
+	
  	
 
     <footer>
