ajout nouvelles méthodes vers ttmStorageApi

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -27,11 +27,13 @@
 
     </div>
     <p><a href="#" ng-click="loadODThemes()">Thèmes Open Data</a></p>
+    <p><a href="#" ng-click="loadODEvents(themes[0].children[0].id)">Events Open Data</a></p>
     <p><a href="#" ng-click="loadLosers()">Losers</a></p>
     <p><a href="#" ng-click="myUser()">myUser</a></p>
     <p><a href="#" ng-click="newUser()">newUser</a></p>
     <p><a href="#" ng-click="myUserThemes()">myUserThemes</a></p>
     <p><a href="#" ng-click="addUserTheme(themes[0].children[0])">addUserTheme</a></p>
+    <p><a href="#" ng-click="subscribe(events[0])">subscribe</a></p>
 
     <footer class="footer">
       <div class="container">
