ajout méthodes unsubscribe

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -34,6 +34,7 @@
     <p><a href="#" ng-click="myUserThemes()">myUserThemes</a></p>
     <p><a href="#" ng-click="addUserTheme(themes[0].children[0])">addUserTheme</a></p>
     <p><a href="#" ng-click="subscribe(events[0])">subscribe</a></p>
+    <p><a href="#" ng-click="unsubscribe(events[0])">unsubscribe</a></p>
 
     <footer class="footer">
       <div class="container">
