bouton sinscrire page evenements

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -102,6 +102,7 @@
                                 <div class="timeline-body">
                                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
                                 </div>
+                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-check"></i> S'inscrire</button>
                             </div>
                         </li>
                         <li>
@@ -116,6 +117,7 @@
                                 <div class="timeline-body">
                                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
                                 </div>
+                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-check"></i> S'inscrire</button>
                             </div>
                         </li>
                         <li>
@@ -130,6 +132,7 @@
                                 <div class="timeline-body">
                                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
                                 </div>
+                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-check"></i> S'inscrire</button>
                             </div>
                         </li>
                         <li>
@@ -144,6 +147,7 @@
                                 <div class="timeline-body">
                                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
                                 </div>
+                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-check"></i> S'inscrire</button>
                             </div>
                         </li>
                        
