renommage code source preferences en portfolio

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -71,7 +71,7 @@
       </div>
   </header>
 
-  <div ui-view id="events"></div>
+  <div ui-view></div>
 
     <footer>
         <div class="container">
