ajout messages d'erreurs

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -71,6 +71,17 @@
       </div>
   </header>
 
+    <div class="container alertdisplay">
+        <div class="alert alert-warning alert-dismissible" role="alert">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <strong>Erreur 400 à la connexion ?</strong> Merci de passer en https.
+        </div>
+        <div class="alert alert-warning alert-dismissible" role="alert">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <strong>Vous avez des soucis de contenu ?</strong> Désactiver la protection du contenu gérée par votre navigateur. Cette fonctionnalité est représentée par un bouclier dans l'URL.
+        </div>
+    </div>
+
   <div ui-view></div>
 
     <footer>
